[gd_scene load_steps=9 format=3 uid="uid://b7q3mc7feqq3s"]

[ext_resource type="Script" uid="uid://b3tsqwwrt24gv" path="res://Scenes/wind_area_2.gd" id="1_ajvy3"]
[ext_resource type="Material" uid="uid://j0n0oes7fpv7" path="res://Materials/WindParticlesProcessBase.tres" id="2_gt5j3"]

[sub_resource type="Curve" id="Curve_gt5j3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.602418), -0.59175, 0.0, 0, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ajvy3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_6i2bm"]
material = SubResource("StandardMaterial3D_ajvy3")
radial_steps = 14
sections = 9
section_length = 0.225
section_rings = 1
curve = SubResource("Curve_gt5j3")

[sub_resource type="Curve" id="Curve_gi7gj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_prraa"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.85, 0.85, 0.85, 0.12549)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
grow_amount = -6.051
use_particle_trails = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_p7kfj"]
material = SubResource("StandardMaterial3D_prraa")
size = 0.5
section_segments = 15
curve = SubResource("Curve_gi7gj")

[node name="Wind Area" type="Area3D"]
script = ExtResource("1_ajvy3")

[node name="Debug_Cloth" type="SoftBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false
mesh = SubResource("TubeTrailMesh_6i2bm")
total_mass = 2.01
linear_stiffness = 0.7
pinned_points = [150]
attachments/0/point_index = 150
attachments/0/spatial_attachment_path = NodePath("")
attachments/0/offset = Vector3(0, 0, 0)

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 50
lifetime = 3.0
trail_enabled = true
trail_lifetime = 1.0
process_material = ExtResource("2_gt5j3")
draw_pass_1 = SubResource("RibbonTrailMesh_p7kfj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
